--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "postcss": "^8.4.31"
   },
   "scripts": {
-    "start": "vite --port 3000",
+    "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
     "test": "vitest"
